--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deck/plain",
+  "name": "@deck/light-deck-skin",
   "version": "1.0.0",
   "main": "main.styl",
   "author": "David Mark Clements",
