--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "main": "main.styl",
   "author": "David Mark Clements",
-  "license": "",
+  "license": "MIT",
   "scripts": {},
   "files": [
     "images",
